--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -209,6 +209,12 @@ section {
     grid-gap: 50px;
 }
 
+.grid-4fr {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+}
+
 .height-text {
     line-height: 20px;
 }
@@ -324,6 +330,38 @@ label {
     }
 }
 
+// ************
+// Бренды автомобилей
+// ************
+
+.auto-brand {
+    & .auto-brand__item {
+        display: flex;
+        font-size: 20px;
+        margin-bottom: 20px;
+
+        & .auto-brand__letter {
+            margin-right: 15px;
+            color: $blue;
+            font-weight: bold;
+        }
+
+        & .auto-brand__brands {
+            & li {
+                margin-bottom: 10px;
+
+                & a {
+                    transition: .3s;
+
+                    &:hover {
+                        color: $blue;
+                        transition: .3s;
+                    }
+                }
+            }
+        }
+    }
+}
 
 // ************
 // Шапка сайта
@@ -479,13 +517,15 @@ label {
     }
 
     & .header__menu {
-        & ul {
+        &>ul {
             width: fit-content;
             display: flex;
             align-items: center;
             height: 100%;
 
             & li {
+                position: relative;
+
                 & a {
                     display: flex;
                     align-items: center;
@@ -505,14 +545,43 @@ label {
                     }
                 }
 
+                & .header__submenu__item {
+                    padding: 10px 0;
+                    position: absolute;
+                    top: 50px;
+                    left: 0;
+                    opacity: 0;
+                    visibility: hidden;
+                    transform: translateY(40px);
+                    transition: .3s;
+                    background-color: #fff;
+                    box-shadow: $mainShadow;
+                    border-radius: 10px;
+                    z-index: 12;
+
+                    & li{
+                        &>a{
+                            font-weight: normal;
+                            font-size: 18px;
+                        }
+                    }
+                }
+
                 &:last-child {
                     margin-right: 40px;
                 }
             }
-        }
 
-        & .header__menu__submenu {
-            display: none;
+            & .header__submenu {
+                &.active {
+                    & .header__submenu__item {
+                        opacity: 1;
+                        visibility: visible;
+                        transform: translateY(0px);
+                        transition: .3s;
+                    }
+                }
+            }
         }
     }
 
@@ -688,13 +757,56 @@ $slider-height: 550px;
 // Карточки акций
 // ************
 
+.card {
+    position: relative;
+    perspective: 150rem;
+
+    &-front,
+    &-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        border-radius: 5px;
+        transition: 0.9s cubic-bezier(.25, .8, .25, 1);
+        backface-visibility: hidden;
+        overflow: hidden;
+        box-shadow: $mainShadow;
+        box-sizing: border-box;
+    }
+
+    &-front {
+        width: 100%;
+        height: 100%;
+    }
+
+    &-back {
+        transform: rotateY(180deg);
+    }
+
+    &:hover &-front {
+        transform: rotateY(-180deg);
+    }
+
+    &:hover &-back {
+        transform: rotateX(0deg);
+    }
+}
+
 .stock-card {
     .stock-card__item {
         position: relative;
         border-radius: 10px;
-        height: 150px;
+        height: 277.5px;
         transition: .3s;
-        border: 2px solid #fff;
+        perspective: 150rem;
+
+
+        & .card-back {
+            & .stock-card__text {
+                color: #000;
+            }
+        }
 
         & .stock-card__text {
             @include centerBlcok(100%, 100%, 0, 0);
@@ -708,22 +820,31 @@ $slider-height: 550px;
             text-align: center;
         }
 
+        & .stock-card__desc {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            padding: 30px;
+            box-sizing: border-box;
+        }
+
+        & .stock-card__date {
+            margin-top: 10px;
+
+            & span {
+                font-weight: bold;
+            }
+        }
+
         & img {
             width: 100%;
-            height: 150px;
+            height: 277.5px;
             object-fit: cover;
             border-radius: 8px;
         }
 
         .black-bg {
             border-radius: 8px;
-        }
-
-        &:hover {
-            border: 2px solid $blue;
-            box-shadow: $mainShadow;
-            cursor: pointer;
-            transition: .3s;
         }
     }
 }
@@ -997,30 +1118,74 @@ $slider-height: 550px;
 // Пагинация
 // ************
 
-.pagination{
+.pagination {
     display: flex;
     margin-top: 30px;
 
-    & li{
+    & li {
         background-color: #fff;
         box-shadow: $mainShadow;
         margin-right: 10px;
         border-radius: 5px;
         transition: .3s;
-        &:hover{
+
+        &:hover {
             background-color: $lightGrey;
             transition: .3s;
         }
-        &.active{
+
+        &.active {
             background-color: $blue;
             box-shadow: none;
             color: #fff;
         }
 
-        & a, & span{
+        & a, & span {
             display: block;
             padding: 20px 15px;
             font-weight: bold;
+        }
+    }
+}
+
+// ************
+// Прогресс выбора ТО
+// ************
+
+.maintenance-progress{
+    & ul{
+        display: flex;
+
+        & li{
+            @include centerBlcok(auto, auto, auto, auto);
+
+            & .maintenance-progress__item__circle{
+                @include centerBlcok(50px, 50px, auto, auto);
+                color: #fff;
+                border-radius: 100%;
+                background-color: $darkGrey;
+            }
+
+            & .maintenance-progress__item__text{
+                margin: 0 10px;
+            }
+
+            & .maintenance-progress__item__next-item{
+                color: $darkGrey;
+                margin-right: 10px;
+                & .material-icons{
+                    font-size: 30px;
+
+                }
+            }
+
+            &.active{
+                color: $blue;
+
+                & .maintenance-progress__item__circle{
+                    background-color: $blue;
+                }
+            }
         }
     }
 }
