--- a/public/css/app.css
+++ b/public/css/app.css
@@ -47,6 +47,60 @@ body > .black-bg.active {
   box-sizing: border-box;
 }
 
+.white-block_grey-strip {
+  padding: 0;
+}
+
+.white-block_grey-strip .grey-strip {
+  background-color: #989898;
+  border-radius: 10px 10px 0 0;
+  color: #fff;
+}
+
+.white-block_grey-strip .grey-strip th:first-child {
+  border-radius: 10px 0 0 0;
+}
+
+.white-block_grey-strip .grey-strip th:last-child {
+  border-radius: 0 10px 0 0;
+}
+
+.white-block_grey-strip .modification__items table {
+  width: 100%;
+}
+
+.white-block_grey-strip .modification__items td,
+.white-block_grey-strip .modification__items th {
+  padding: 20px 40px;
+}
+
+.white-block_grey-strip .modification__items td {
+  padding: 30px 40px;
+}
+
+.white-block_grey-strip .modification__items tr {
+  border-bottom: 1px solid #989898;
+}
+
+.white-block_grey-strip .modification__items tr:last-child {
+  border: 0;
+}
+
+.transparent-btn a {
+  padding: 10px 20px;
+  color: #1871C3;
+  border: 2px solid #1871C3;
+  border-radius: 10px;
+  background-color: #fff;
+  transition: 0.3s;
+}
+
+.transparent-btn a:hover {
+  background-color: #1871C3;
+  color: #fff;
+  transition: 0.3s;
+}
+
 .main-btn {
   border-radius: 10px;
   border: 0;
@@ -109,6 +163,46 @@ body > .black-bg.active {
   background-color: #1871C3;
   color: #fff;
   transition: 0.3s;
+}
+
+.main-tabs ul {
+  display: grid;
+  grid-template-columns: repeat(3, 150px);
+  text-align: center;
+}
+
+.main-tabs ul li {
+  border: 1px solid #989898;
+  border-right: 0;
+  color: #989898;
+  padding: 15px;
+  transition: 0.3s;
+}
+
+.main-tabs ul li:first-child {
+  border-radius: 10px 0 0 10px;
+}
+
+.main-tabs ul li:last-child {
+  border-radius: 0 10px 10px 0;
+  border-right: 1px solid #989898;
+}
+
+.main-tabs ul li:hover {
+  cursor: pointer;
+  background-color: #989898;
+  color: #fff;
+  transition: 0.3s;
+}
+
+.main-tabs ul li.active {
+  border: 1px solid #1871C3;
+  background-color: #1871C3;
+  color: #fff;
+}
+
+.tabs__item {
+  margin-top: 30px;
 }
 
 .black-bg {
@@ -1104,7 +1198,7 @@ label.active {
   display: flex;
 }
 
-.maintenance-progress ul li {
+.maintenance-progress ul li a {
   width: auto;
   height: auto;
   top: auto;
@@ -1114,7 +1208,7 @@ label.active {
   align-items: center;
 }
 
-.maintenance-progress ul li .maintenance-progress__item__circle {
+.maintenance-progress ul li a .maintenance-progress__item__circle {
   width: 50px;
   height: 50px;
   top: auto;
@@ -1125,26 +1219,65 @@ label.active {
   color: #fff;
   border-radius: 100%;
   background-color: #989898;
+  transition: 0.3s;
 }
 
-.maintenance-progress ul li .maintenance-progress__item__text {
+.maintenance-progress ul li a .maintenance-progress__item__text {
   margin: 0 10px;
 }
 
-.maintenance-progress ul li .maintenance-progress__item__next-item {
+.maintenance-progress ul li a .maintenance-progress__item__next-item {
   color: #989898;
   margin-right: 10px;
 }
 
-.maintenance-progress ul li .maintenance-progress__item__next-item .material-icons {
+.maintenance-progress ul li a .maintenance-progress__item__next-item .material-icons {
   font-size: 30px;
 }
 
-.maintenance-progress ul li.active {
+.maintenance-progress ul li.active a {
   color: #1871C3;
 }
 
 .maintenance-progress ul li.active .maintenance-progress__item__circle {
   background-color: #1871C3;
+}
+
+.maintenance-progress ul li.maintenance-progress__item_checked a {
+  color: #18C35C;
+}
+
+.maintenance-progress ul li.maintenance-progress__item_checked .maintenance-progress__item__circle {
+  background-color: #18C35C;
+}
+
+.maintenance-progress ul li:hover .maintenance-progress__item__circle {
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+}
+
+.auto-model ul {
+  display: grid;
+  grid-template: repeat(3, auto)/repeat(7, 150px);
+  grid-auto-flow: column;
+}
+
+.auto-model ul .auto-model__item {
+  box-sizing: border-box;
+}
+
+.auto-model ul .auto-model__item a {
+  width: 100%;
+  display: block;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.auto-model ul .auto-model__item:hover {
+  background-color: #DEDEDE;
+}
+
+.auto-model ul .auto-model__item:hover a {
+  color: #1871C3;
 }
 
