--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,6 +65,24 @@ body {
     color: $blue;
 }
 
+.bold-text{
+    font-weight: bold;
+}
+
+.fz-22{
+    font-size: 22px;
+}
+
+.grey-text {
+    color: $darkGrey;
+}
+
+.thin-frame{
+    border: 1px solid $lightGrey;
+    border-radius: 10px;
+    padding: 30px;
+}
+
 .white-block {
     width: 100%;
     padding: 40px;
@@ -140,6 +158,7 @@ body {
     width: 100%;
     padding: 15px 0;
     transition: .3s;
+    text-align: center;
 
     &:hover {
         background-color: #fff;
@@ -157,6 +176,29 @@ body {
             color: #fff;
         }
     }
+
+    &.main-btn_red{
+        background-color: $red;
+
+        &:hover{
+            color: $red;
+            background-color: #fff;
+        }
+    }
+}
+
+.flex{
+    @include centerBlcok(auto, auto, auto, auto);
+    justify-content: flex-start;
+}
+
+.blue-btn{
+    width: fit-content;
+    background-color: $blue;
+    padding: 15px;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: bold;
 }
 
 .news-btn {
@@ -277,7 +319,7 @@ section {
     .section-title__text {
         width: fit-content;
         position: relative;
-        font-size: 36px;
+        font-size: 30px;
         font-weight: bold;
         background-color: #fff;
         z-index: 2;
@@ -289,7 +331,7 @@ section {
         height: 3px;
         background-color: $red;
         position: absolute;
-        top: 18px;
+        top: 15px;
         left: 0;
     }
 
@@ -1391,5 +1433,192 @@ $slider-height: 550px;
 
     & .maintenance-title__button{
         justify-self: flex-end;
+    }
+}
+
+// ************
+// Работа с продуктом
+// ************
+
+.product-catalog-wrapper{
+    display: grid;
+    grid-template-columns: 250px 900px;
+    grid-gap: 50px;
+}
+
+.product-card{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+
+    & .product-card__item{
+        border: 1px solid $lightGrey;
+        border-radius: 10px;
+        padding: 20px;
+        transition: .3s;
+        height: 372px;
+
+        & .product-card__img{
+            & img{
+                width: 100%;
+                height: 150px;
+                object-fit: contain;
+            }
+
+            margin-bottom: 30px;
+        }
+
+        & .product-card__price{
+            font-weight: bold;
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+
+        & .product-card__name{
+            color: $blue;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            margin-bottom: 10px;
+            transition: .3s;
+        }
+
+        & .product-card__properties{
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            color: $darkGrey;
+            margin-bottom: 10px;
+            height: 64px;
+        }
+
+        &:hover{
+            & .product-card__name{
+                color: #000;
+                transition: .3s;
+            }
+
+            box-shadow: $mainShadow;
+            transition: .3s;
+        }
+    }
+}
+
+.filter{
+    & .filter__item{
+        border: 1px solid $lightGrey;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        transition: .3s;
+
+        & .filter__item__title{
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            padding: 15px 20px 13px;
+            font-weight: bold;
+            transition: .3s;
+            border-bottom: 1px solid $lightGrey;
+            border-radius: 10px;
+
+            &>span{
+                transition: .3s;
+                margin-top: -4px;
+            }
+
+            &:hover{
+                background-color: $lightGrey;
+                transition: .3s;
+                cursor: pointer;
+            }
+        }
+
+        & .filter__item__content{
+            padding: 7px 20px 20px 20px;
+
+            & input{
+                display: inline-block;
+                width: auto;
+                margin-right: 10px;
+            }
+
+            & label{
+                margin-bottom: 2px;
+                &:last-child{
+                    margin-bottom: 0;
+                }
+            }
+        }
+
+        &.active{
+            transition: .3s;
+
+            & .filter__item__title{
+                &>span{
+                    transition: .3s;
+                    transform: rotate(-180deg);
+                }
+            }
+        }
+    }
+}
+
+.product{
+    display: grid;
+    grid-template-columns: 300px 850px;
+    grid-gap: 50px;
+    margin-top: 50px;
+
+    & .product__img{
+        & img{
+            width: 100%;
+            height: 300px;
+            object-fit: contain;
+        }
+    }
+
+    & .product__info{
+        & .product__text{
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        & .product__info-wrapper{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 50px;
+            margin-top: 20px;
+
+            & .product__info-item{
+                margin-bottom: 10px;
+            }
+
+            & .product__price{
+                font-size: 22px;
+                letter-spacing: 1px;
+                padding: 20px 30px;
+                box-shadow: $mainShadow;
+            }
+
+            & .product__fabricator-provider{
+                margin: 30px 0;
+
+                & span{
+                    margin-right: 10px;
+                }
+            }
+
+            & .product__properties{
+                margin: 20px 0;
+
+                & .product__property{
+                    display: grid;
+                    grid-template-columns: 200px 100px;
+
+                }
+            }
+        }
     }
 }
