--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,6 +26,13 @@ body > .black-bg.active {
   margin: 0 auto;
 }
 
+span.material-icons {
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
 .grey-block {
   width: 100%;
   border-radius: 20px;
@@ -1403,13 +1410,65 @@ label.active {
   grid-gap: 50px;
 }
 
-.product-card {
+.loader svg {
+  -webkit-animation-name: loaderAnimation;
+          animation-name: loaderAnimation;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
+
+@-webkit-keyframes loaderAnimation {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes loaderAnimation {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.product-card-wrapper {
+  position: relative;
+}
+
+.product-card-wrapper .product-card__loader {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.product-card-wrapper .product-card__loader.active {
+  display: flex;
+}
+
+.product-card-wrapper .product-card {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px;
 }
 
-.product-card .product-card__item {
+.product-card-wrapper .product-card .product-card__item {
   border: 1px solid #DEDEDE;
   border-radius: 10px;
   padding: 20px;
@@ -1417,24 +1476,24 @@ label.active {
   height: 372px;
 }
 
-.product-card .product-card__item .product-card__img {
+.product-card-wrapper .product-card .product-card__item .product-card__img {
   margin-bottom: 30px;
 }
 
-.product-card .product-card__item .product-card__img img {
+.product-card-wrapper .product-card .product-card__item .product-card__img img {
   width: 100%;
   height: 150px;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-.product-card .product-card__item .product-card__price {
+.product-card-wrapper .product-card .product-card__item .product-card__price {
   font-weight: bold;
   font-size: 22px;
   margin-bottom: 10px;
 }
 
-.product-card .product-card__item .product-card__name {
+.product-card-wrapper .product-card .product-card__item .product-card__name {
   color: #1871C3;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -1444,7 +1503,7 @@ label.active {
   transition: 0.3s;
 }
 
-.product-card .product-card__item .product-card__properties {
+.product-card-wrapper .product-card .product-card__item .product-card__properties {
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
@@ -1454,12 +1513,12 @@ label.active {
   height: 64px;
 }
 
-.product-card .product-card__item:hover {
+.product-card-wrapper .product-card .product-card__item:hover {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   transition: 0.3s;
 }
 
-.product-card .product-card__item:hover .product-card__name {
+.product-card-wrapper .product-card .product-card__item:hover .product-card__name {
   color: #000;
   transition: 0.3s;
 }
@@ -1521,19 +1580,26 @@ label.active {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #DEDEDE;
+  margin-top: 10px;
 }
 
 .filter .filter__item .filter__item__content .filter__item_number .dash {
+  color: #DEDEDE;
   margin: 0 10px;
 }
 
-.filter .filter__item .filter__item__content .filter__item_number input {
+.filter .filter__item .filter__item__content .filter__item_number label {
+  color: #DEDEDE;
+  margin: 0 5px;
+}
+
+.filter .filter__item .filter__item__content .filter__item_number label input {
+  margin: 0;
   width: 100%;
   border: 1px solid #DEDEDE;
 }
 
-.filter .filter__item .filter__item__content .filter__item_number input:focus {
+.filter .filter__item .filter__item__content .filter__item_number label input:focus {
   border: 1px solid #2B2B2B;
 }
 
