--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,6 +53,13 @@ body {
     margin: 0 auto;
 }
 
+span.material-icons{
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+}
+
 .grey-block {
     width: 100%;
     border-radius: 20px;
@@ -1469,65 +1476,102 @@ $slider-height: 550px;
     grid-gap: 50px;
 }
 
-.product-card{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
+.loader{
+    & svg{
+        animation-name: loaderAnimation;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+}
 
-    & .product-card__item{
-        border: 1px solid $lightGrey;
-        border-radius: 10px;
-        padding: 20px;
-        transition: .3s;
-        height: 372px;
+@keyframes loaderAnimation {
+    0%{
+        transform: rotate(0);
+    }
 
-        & .product-card__img{
-            & img{
-                width: 100%;
-                height: 150px;
-                object-fit: contain;
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.product-card-wrapper{
+    position: relative;
+
+    & .product-card__loader{
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.5);
+        @include centerBlock(100%, 100%, 0, 0);
+
+        display: none;
+
+        &.active{
+            display: flex;
+        }
+    }
+
+    & .product-card{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 50px;
+
+        & .product-card__item{
+            border: 1px solid $lightGrey;
+            border-radius: 10px;
+            padding: 20px;
+            transition: .3s;
+            height: 372px;
+
+            & .product-card__img{
+                & img{
+                    width: 100%;
+                    height: 150px;
+                    object-fit: contain;
+                }
+
+                margin-bottom: 30px;
             }
 
-            margin-bottom: 30px;
-        }
+            & .product-card__price{
+                font-weight: bold;
+                font-size: 22px;
+                margin-bottom: 10px;
+            }
 
-        & .product-card__price{
-            font-weight: bold;
-            font-size: 22px;
-            margin-bottom: 10px;
-        }
-
-        & .product-card__name{
-            color: $blue;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            margin-bottom: 10px;
-            transition: .3s;
-        }
-
-        & .product-card__properties{
-            display: -webkit-box;
-            -webkit-line-clamp: 4;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            color: $darkGrey;
-            margin-bottom: 10px;
-            height: 64px;
-        }
-
-        &:hover{
             & .product-card__name{
-                color: #000;
+                color: $blue;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                margin-bottom: 10px;
                 transition: .3s;
             }
 
-            box-shadow: $mainShadow;
-            transition: .3s;
+            & .product-card__properties{
+                display: -webkit-box;
+                -webkit-line-clamp: 4;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                color: $darkGrey;
+                margin-bottom: 10px;
+                height: 64px;
+            }
+
+            &:hover{
+                & .product-card__name{
+                    color: #000;
+                    transition: .3s;
+                }
+
+                box-shadow: $mainShadow;
+                transition: .3s;
+            }
         }
     }
 }
+
+
 
 .filter{
     & .filter__item{
@@ -1578,18 +1622,25 @@ $slider-height: 550px;
 
             & .filter__item_number{
                 @include centerBlock(auto, auto, auto, auto);
-                color: $lightGrey;
+                margin-top: 10px;
 
                 & .dash{
+                    color: $lightGrey;
                     margin: 0 10px;
                 }
 
-                & input{
-                    width: 100%;
-                    border: 1px solid $lightGrey;
+                & label{
+                    color: $lightGrey;
+                    margin: 0 5px;
 
-                    &:focus{
-                        border: 1px solid $lightenDark;
+                    & input{
+                        margin: 0;
+                        width: 100%;
+                        border: 1px solid $lightGrey;
+
+                        &:focus{
+                            border: 1px solid $lightenDark;
+                        }
                     }
                 }
             }
