Реализовано сохранение настроек фильтрации при перезагрузке

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -818,6 +818,10 @@ $slider-height: 550px;
     height: $slider-height;
     position: relative;
 
+    & .slick-slide{
+        height: 550px !important;
+    }
+
     .main-slider {
         box-shadow: $mainShadow;
         border-radius: 20px;
