--- a/public/css/app.css
+++ b/public/css/app.css
@@ -771,6 +771,10 @@ label.active {
   position: relative;
 }
 
+.main-slider-wrapper .slick-slide {
+  height: 550px !important;
+}
+
 .main-slider-wrapper .main-slider {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
