--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1727,3 +1727,146 @@ label.active {
   margin-bottom: 10px;
 }
 
+.basket {
+  display: grid;
+  grid-template-columns: 795px 350px;
+  grid-gap: 55px;
+  margin-top: 60px;
+}
+
+.basket__item {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 25px;
+  margin-top: 50px;
+}
+
+.basket__item:first-child {
+  margin-top: 0;
+}
+
+.basket__item .basket__item__img img {
+  width: 100px;
+  height: 80px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.basket__item .basket__item__title-wrapper {
+  position: relative;
+}
+
+.basket__item .basket__item__title-wrapper .basket__item__title {
+  max-width: 270px;
+  font-size: 18px;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.basket__item .basket__item__title-wrapper .basket__item__title:hover + .basket__item__title_all {
+  display: block;
+  transform: translateY(0);
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s;
+}
+
+.basket__item .basket__item__title-wrapper .basket__item__title_all {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 25px;
+  left: 0;
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  padding: 15px;
+  background-color: #fff;
+  transform: translateY(-25px);
+  transition: 0.3s;
+  font-weight: bold;
+}
+
+.basket__item .basket__item__title-wrapper .basket__item__title_all:hover {
+  display: block;
+  transform: translateY(0);
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s;
+}
+
+.basket__item .basket__item__few-products {
+  color: #D32F2F;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.basket__item .basket__item__delete {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px;
+  color: #D32F2F;
+  font-size: 20px;
+  border-radius: 100%;
+  transition: 0.3s;
+}
+
+.basket__item .basket__item__delete:hover {
+  background-color: #D32F2F;
+  color: #fff;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.basket__item .basket__item__fabricator {
+  color: #989898;
+  margin-top: 10px;
+}
+
+.basket__item .product__count-btn {
+  margin: 0;
+  align-items: flex-start;
+}
+
+.basket__item .product__count-btn .circle-btn {
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  border: 1px solid #DEDEDE;
+}
+
+.basket__item .product__count-btn .circle-btn .material-icons {
+  font-size: 18px;
+}
+
+.basket__item .product__count-btn input {
+  width: 50px;
+  height: 37px;
+  text-align: center;
+  border: 0;
+}
+
+.basket__item .product__count-btn input::-webkit-outer-spin-button,
+.basket__item .product__count-btn input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+.basket__item .basket__item__price_all {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.basket__item .basket__item__price_one {
+  color: #989898;
+  margin-top: 10px;
+}
+
