--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,6 +53,17 @@ body {
     margin: 0 auto;
 }
 
+.big-text{
+    margin-top: 40px;
+    margin-bottom: 10px;
+    font-size: 36px;
+    font-weight: bold;
+
+    & + a{
+        color: $blue;
+    }
+}
+
 span.material-icons{
     user-select: none;
     -ms-user-select: none;
@@ -213,6 +224,16 @@ span.material-icons{
         &:hover{
             color: $red;
             background-color: #fff;
+        }
+
+        &:disabled {
+            background-color: transparentize($red, 0.5);
+
+            &:hover {
+                background-color: transparentize($red, 0.5);
+                box-shadow: none;
+                color: #fff;
+            }
         }
     }
 }
