--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1758,12 +1758,21 @@ label.active {
 .basket__item {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  grid-gap: 25px;
-  margin-top: 50px;
+  grid-gap: 20px;
+  padding: 30px 15px;
+  padding-left: 30px;
+  border-radius: 10px;
+  transition: 0.3s;
+  outline: none;
 }
 
-.basket__item:first-child {
-  margin-top: 0;
+.basket__item:hover {
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+}
+
+.basket__item .basket__item__img {
+  display: block;
 }
 
 .basket__item .basket__item__img img {
@@ -1775,9 +1784,17 @@ label.active {
 
 .basket__item .basket__item__title-wrapper {
   position: relative;
+  display: block;
+  transition: 0.3s;
+}
+
+.basket__item .basket__item__title-wrapper:hover .basket__item__title {
+  color: #1871C3;
+  transition: 0.3s;
 }
 
 .basket__item .basket__item__title-wrapper .basket__item__title {
+  display: block;
   max-width: 270px;
   font-size: 18px;
   font-weight: bold;
