--- a/public/css/app.css
+++ b/public/css/app.css
@@ -530,7 +530,7 @@ label.active {
 .header-contact {
   background-color: #2B2B2B;
   color: #fff;
-  padding: 10px 0;
+  padding: 20px 0;
   font-weight: 400;
   font-size: 14px;
 }
@@ -625,6 +625,7 @@ label.active {
   padding: 10px 0;
   border-radius: 10px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  z-index: 2;
 }
 
 .header-contact .header-contact_right .lang-change .lang-change__items .lang-change__item {
@@ -1270,6 +1271,7 @@ label.active {
   align-items: center;
   display: grid;
   grid-template-columns: 30px 150px;
+  grid-gap: 10px;
   transition: 0.3s;
 }
 
