--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -573,7 +573,7 @@ label {
 .header-contact {
     background-color: $lightenDark;
     color: #fff;
-    padding: 10px 0;
+    padding: 20px 0;
     font-weight: 400;
     font-size: 14px;
 
@@ -667,6 +667,7 @@ label {
                 padding: 10px 0;
                 border-radius: 10px;
                 box-shadow: $mainShadow;
+                z-index: 2;
 
                 & .lang-change__item {
                     margin-bottom: 5px;
@@ -1315,6 +1316,7 @@ $slider-height: 550px;
                 align-items: center;
                 display: grid;
                 grid-template-columns: 30px 150px;
+                grid-gap: 10px;
                 transition: .3s;
 
                 &:hover {
